fix z-index to variables + header animation

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -7,9 +7,10 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   margin-top: 1.5rem;
-  z-index: 1;
+  z-index: var(--z-index-header);
   opacity: 0;
   visibility: hidden;
+  transition: all 300ms;
   /*mix-blend-mode: lighten;*/
 
   &.visible {
