--- a/src/layouts/animations.module.css
+++ b/src/layouts/animations.module.css
@@ -4,6 +4,11 @@
   100% { transform: scale(0.7); opacity: 0; }
 }
 
+@keyframes appear {
+  0% { transform: translate3d(0, 60px, 0) rotateZ(10deg); opacity: 0; }
+  100% { transform: translate3d(0, 0, 0); opacity: 1; }
+}
+
 @keyframes appearLeft {
   0% { transform: translate3d(90px, 60px, 0) rotateZ(10deg); opacity: 0; }
   33% { transform: translate3d(90px, 0, 0); opacity: 1; }
@@ -16,6 +21,11 @@
   33% { transform: translate3d(-90px, 0, 0); opacity: 1; }
   38% { transform: translate3d(-90px, 0, 0); opacity: 1; }
   54% { transform: translate3d(0, 0, 0); }
+}
+
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
 }
 
 @keyframes fadeIn {
