--- a/src/layouts/root.css
+++ b/src/layouts/root.css
@@ -24,5 +24,8 @@
   --ease-in-out-expo: cubic-bezier(1.000, 0.000, 0.000, 1.000);
   --ease-in-out-quint: cubic-bezier(0.860, 0.000, 0.070, 1.000);
 
+  --z-index-header: 10;
+  --z-index-intro: 9;
+
   @custom-media --max-width (width <= 1140px);
 }
